Stability improvement to basic preparation algorithms

--- a/Text/maintoc.xhtml
+++ b/Text/maintoc.xhtml
@@ -9,7 +9,8 @@
 </head>
 <body>
 
-<h2>The Declearation of Nature and Purpose for Algorithmic Rationalism</h2>
+<h1>The Declearation of Nature and Purpose for Algorithmic Rationalism</h1>
+<h2>Contents</h2>
 
 </body>
 </html>
