Discussed expansion of what logic means

--- a/Text/basic-principles-of-algorithmic-rationalism.xhtml
+++ b/Text/basic-principles-of-algorithmic-rationalism.xhtml
@@ -67,13 +67,10 @@ them as the nefarious constructs that internet media
 companies use to manipulate people) algorithms are
 not necessarily nefarious, nor are they necessarily
 tied to computers.
-These algorithms, for example, are not designed to
-be followed by computers, but by human beings who
+These algorithms are not designed to
+be followed by computers at all, but by human beings who
 wish to come to as honest an understanding as possible
 with regards to the solidity of reason and discourse.
-</p>
-
-<p class = "reg">
 </p>
 
 </body>
