Created ebook distribution script

--- a/Text/use-of-algorithms.xhtml
+++ b/Text/use-of-algorithms.xhtml
@@ -4,40 +4,14 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Basic Principles of Algorithmic Rationalism</title>
+<title>Use of algorithms to resolve matters of uncertainty</title>
 <link href="../Styles/chapterstyle.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
 
-<h2>Basic Principles of Algorithmic Rationalism</h2>
+<h3>Use of algorithms to resolve matters of uncertainty</h3>
 
 <p class = "head">
-Only one thing is sacrosanct in Algorithmic Rationalism,
-and that is the conviction that
-people ought to follow the dictates of
-logic, reason, and evidence wherever they lead.
-Consequently, there is only one thing that is taboo
-in Algorithmic Rationalism, and that taboo is to
-go against the one sacrosanct.
-</p>
-
-<p class = "reg">
-As for the methodologies used in Algorithmic Rationalism,
-the imperative to follow them is not a separate thing
-from the one sacrosanct, but an extension of it.
-This is because you are not truly following the dictates
-of logic, reason, and evidence wherever they lead if
-you violate the process by which these dictates are
-followed.
-</p>
-
-<p class = "reg">
-</p>
-
-<p class = "reg">
-</p>
-
-<p class = "reg">
 Very prominent among these methodologies is the one
 from which Algorithmic Rationalism derives its name -
 that being the use of razor algorithms to resolve matters
