Added section on religion

--- a/Text/relation-to-religion.xhtml
+++ b/Text/relation-to-religion.xhtml
@@ -4,17 +4,89 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>GenericName</title>
+<title>Relation to religion</title>
 <link href="../Styles/chapterstyle.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
 
-<h3>GenericName</h3>
+<h3>Relation to religion</h3>
 
 <p class = "head">
+As with most schools of Rationalism, the reigning theory on the
+God question is atheism.
+The existence of a Creator God is not seen as altogether impossible
+but as highly improbable - and of an Interventionist God even more
+imporbable.
 </p>
 
 <p class = "reg">
+That said - this reigning theory is not imposed as a requirement
+in Algorithmic Rationalism.
+On the other hand, this theory is not to be casually disregarded on the
+basis of some alternative being more emotionally satisfying,
+socially convenient, or politically convenient to believe.
+The actual position on how Algorithmic Rationalists ought to
+answer the God question is more nuanced than either of those
+two extremes.
+</p>
+
+<p class = "reg">
+There is only one sacrosanct in Algorithmic Rationalism - the commitment
+to follow the dictates of logic, reason, and evidence wherever they lead.
+This one sacrosanct does not contain any statement on theology.
+Not only does it not explicitly contain any statement on theology,
+but unlike the requirement to adhere to the methodologies of Algorithmic
+Rationalism, it isn't even implicitly in there.
+</p>
+
+<p class = "reg">
+That said - while this position of atheism is by no means an
+extension of the One Sacrosanct of Algorithmic Rationalism,
+we do believe it is the inevitable consequence of applying
+it to the God question.
+While terribly weak arguments for such a position (or even a more
+extreme position) do in fact exist,
+there are also some arguments for this position that are
+quite solid, are firmly backed by the weight of the evidence
+on the matter, and have sustained repeated checks.
+It may be possible for someone to apply the One Sacrosanct
+to the God question and a different answer - but it is
+extremely unlikely if the dictates of logic, reason, and evidence
+are truly followed in full.
+</p>
+
+<p class = "reg">
+That said - we wish to avoid a situation in which
+people blindly accept such an atheistic position simply
+because the community says that it is so.
+Also - even if we had incontrovertible proof that
+any perfect rationalist would embrace this atheistic
+position, we do not know anybody who is actually a
+perfect rationalist.
+Even the best of us are merely imperfect rationalists
+working on ourselves toward the goal of perfection.
+We would rather accept among us someone who genuinely
+attempts to follow the One Sacrosanct but who due to
+such imperfection lands on theism than someone who
+blindly accepts atheism simply because that's what
+the community says.
+Someone who lands on theism due to such an imperfection
+may have their theistic views challenged in the community
+in the form of people pointing out issues that they might
+have failed to consider - but they will be respected.
+</p>
+
+<p class = "reg">
+There is, however, one more reason why atheism is not
+a requirement for being regarded as an Algorithmic Rationalist.
+This is because there may be some people who have truly
+adopted Algorithmic Rationalism and are applying it to
+many areas of their life - but who for some reason haven't
+gotten around to, or simply aren't ready to apply it to the
+God question.
+They, too, are preferable to those who don't practice
+Rationalism at all but accept atheism for some reason
+other than logic, reason, or the weight of evidence.
 </p>
 
 </body>
