Added a blurb on the definition of "religion".

--- a/Text/relation-to-religion.xhtml
+++ b/Text/relation-to-religion.xhtml
@@ -89,5 +89,36 @@ Rationalism at all but accept atheism for some reason
 other than logic, reason, or the weight of evidence.
 </p>
 
+<p class = "reg">
+That said - while this is all the position of Algorithmic
+Rationalism with regard to the proposition of God's existence,
+there is no such reigning theory as to what constitutes the
+definition of "religion".
+There are some who feel very strongly that "religion" is
+defined by belief in theism or in other equally dubious
+supernatural claims (such as karma and reincarnation).
+Others, however, have long-standing traditions of practice
+which, even without any requirement of supernatural belief,
+their adherence still cling strongly to the label of religion.
+Algorithmic Rationalism offers no resolution at all as
+to this dispute of definition.
+</p>
+
+<p class = "reg">
+At any rate - whether religion is defined by belief,
+by practice, or by any combination thereof,
+the only religious beliefs and practices that are
+considered out-of-bounds
+in Algorithmic Rationalism are those whose nature
+is to inhibit people from following the
+One Sacrosanct of Algorithmic Rationalism.
+For example, belief that all people who don't
+adhere to a particular religion will have their
+consciousness subject to
+eternal torture after their deaths
+is indeed out-of-bounds as far as
+Algorithmic Rationalism is concerned.
+</p>
+
 </body>
 </html>
