--- a/Text/copyright.xhtml
+++ b/Text/copyright.xhtml
@@ -4,7 +4,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title></title>
+<title>Copyright</title>
 <link href="../Styles/noticestyle.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
