First entry in the glossary is written.

--- a/Text/basic-principles.xhtml
+++ b/Text/basic-principles.xhtml
@@ -12,7 +12,8 @@
 <h2>Basic Principles of Algorithmic Rationalism</h2>
 
 <p class = "head">
-Only one thing is sacrosanct in Algorithmic Rationalism,
+Only one thing is sacrosanct in <a href = "glossary.xhtml#df_algorithmic_rationalism"
+class = "glsr">Algorithmic Rationalism</a>,
 and that is the conviction that
 people ought to follow the dictates of
 logic, reason, and evidence wherever they lead.
