--- a/glsr/begin.xhtml
+++ b/glsr/begin.xhtml
@@ -4,7 +4,17 @@
 <div class = "def">
 <span class = "trm">Algorithmic Rationalism</span>
 <span class = "dfn">
+A variant of English Rationalism
+that strives to be as systematic and reliable
+as humanly possible through a number of techniques,
+among them being the use of razor algorithms
+to resolve matters of uncertainty in logic
+and in the practice of Rationalism.
 </span>
+</div>
+<div class = "edfn">
+A more in-depth explanation of Algorithmic Rationalism is
+the focus of this document.
 </div>
 </div>
 
