Better organization of glossary

--- a/glsr/df-algorithmic_rationalism.xhtml
+++ b/glsr/df-algorithmic_rationalism.xhtml
@@ -4,7 +4,7 @@
 <div class = "def">
 <span class = "trm">Algorithmic Rationalism</span>
 <span class = "dfn">
-A variant of English Rationalism
+A form of <a href = "#df_rationalism" class = "glsr">Rationalism</a>
 that strives to be as systematic and reliable
 as humanly possible through a number of techniques,
 among them being the use of razor algorithms
