Added placeholder notes - as I'm running short on time

--- a/Text/historical-echo-chamber.xhtml
+++ b/Text/historical-echo-chamber.xhtml
@@ -43,7 +43,43 @@ launch an assault of rationally-empty rhetoric.
 </p>
 
 <p class = "reg">
+When the preservation of such channels is far more often used
+by those who seek to take the advantage of the good will behind
+them in effort to promote rhetoric than by fellow rationalists
+of differing sociopolitical persuasion who come for the genuine
+purpose of discussing the differences in persuasion in the same spirit
+for which the channels are kept open - the Rationalist is left
+with limited ways in which to respond.
+</p>
+
+<p class = "reg">
+Some Rationalists decide to engage the hostile visitor in debate
+the same way that they would debate a visitor of good will.
+This approach, however, can be extremely frustrating, and not
+particularly fruitful, as the Irrationalists lack the necessary
+regard or skills in logic and reason to present a convincing case
+by such means if they happen to be correct or to accept correction
+if such tools prove them to be in error.
+Debating them has been described as playing Chess with pigeons
+- the idea being that they knock over the pieces, defacate on
+the board, and then claim victory for themselves.
+</p>
+
+<p class = "plch">
+More goes here. We haven't discussed how some shut down in frustration
+- nor have we discussed how to DIFFERENTIATE A REAL DEBATE FROM A
+RHETORIC CONTEST
+</p>
+
+<p class = "plch">
+I also haven't had a chance to discuss the distinction between fake news
+and real news.
+</p>
+
+<p class = "plch">
+Another thing that hasn't been discussed is the abuse of the First Amendment - something which may call for a subchapter of its own.
 </p>
 
 </body>
 </html>
+
