Outline of Devil's Advocate

--- a/Text/devils-advocate.xhtml
+++ b/Text/devils-advocate.xhtml
@@ -11,9 +11,26 @@
 
 <h3>Sacred Call of the Devil's Advocate</h3>
 
-<p class = "head">
-TO BE WRITTEN LATER
+<p class = "plch">
+Role of providing relief from the Echo Chamber
 </p>
+
+<p class = "plch">
+The SKILL of being a Devil's Advocate also trains
+you to be a better skeptic of even your OWN views.
+</p>
+
+<div class = "plol">
+<div class = "oll1">
+Two roles
+</div>
+<div class = "oll2">
+Provide arguments FOR the other side
+</div>
+<div class = "oll2">
+Refute FAULTY arguments for the PRIMARY side
+</div>
+</div>
 
 </body>
 </html>
