Fleshed out section on training to overcome irrational biases.

--- a/Text/training-against-biases.xhtml
+++ b/Text/training-against-biases.xhtml
@@ -12,7 +12,51 @@
 <h3>Training to overcome irrational biases</h3>
 
 <p class = "head">
-TO BE WRITTEN LATER
+One key goal in Algorithmic Rationalism
+is training ourselves to overcome our
+irrational biases.
+This is because no matter how much we
+learn to understand the process of Rationality
+in theory, and no matter how many exercises we
+do to hone this faculty,
+our irrational biases will constantly threaten
+to interfere with the process,
+and are liable to interfere without us even
+consciously realizing that this has happened.
+</p>
+
+<p class = "reg">
+It has been suggested that part of the
+means by which to do this on matters of social
+justice is to put yourself into the other person's
+sues - a practice of Cognitive Empathy.
+However, there is still the danger of our
+irrational biases tricking us into thinking
+that we have done this when in fact we haven't.
+</p>
+
+<p class = "reg">
+Overcoming your biases requires a lot
+of skills that are best honed both with
+exercises done on one's own and done
+in a community of Algorithmic Rationalists.
+We have to learn to check our biases -
+and that means, recognizing when they
+crop up, recognizing how they warp our
+thoughts, and administering the appropriate
+remedies to our thoughts.
+</p>
+
+<p class = "reg">
+All this requires that we know about
+the main viases that exist - and that
+each of us knows to which biases we
+are especially seceptible.
+We must know the warning signs of
+these biases - and we must develop
+algorithms for helping us better
+discern when one of these irrational
+biases is affecting our thoughts.
 </p>
 
 </body>
