Added the bit of skeptic open-mindedness

--- a/Text/training-against-biases.xhtml
+++ b/Text/training-against-biases.xhtml
@@ -59,5 +59,14 @@ discern when one of these irrational
 biases is affecting our thoughts.
 </p>
 
+<p class = "reg">
+Very importantly, though, this process involves
+training in the art of true open-mindedness,
+which means, healthy skepticism of your own
+beliefs, whatever they are, and a willingness
+to modify them should evidence and reason
+dictate that it is appropriate to do so.
+</p>
+
 </body>
 </html>
