Basic completion of echo-chamber subchapter.

--- a/Text/historical-echo-chamber.xhtml
+++ b/Text/historical-echo-chamber.xhtml
@@ -65,19 +65,32 @@ Debating them has been described as playing Chess with pigeons
 the board, and then claim victory for themselves.
 </p>
 
-<p class = "plch">
-More goes here. We haven't discussed how some shut down in frustration
-- nor have we discussed how to DIFFERENTIATE A REAL DEBATE FROM A
-RHETORIC CONTEST
+<p class = "reg">
+The maintainers of the channels of debate have responded to this
+abuse in various ways.
+Some of them have indulged in the mockery of debate up to the
+point of exhaustion, upon which they either let the propagandist
+present as victorious.
+At times, it has even been alleged that engaging a known distorter
+of logic and reason in debate even runs the risk of granting
+validation to a methodology of argument that deserves no such
+validation.
+The most notable recipient of this criticism is Bill Nye for his
+decision to participate in a debate against the Creationist,
+Ken Ham.
+However, surely Bill Nye is not the only one against whom such
+criticism could be directed.
 </p>
 
-<p class = "plch">
-I also haven't had a chance to discuss the distinction between fake news
-and real news.
-</p>
-
-<p class = "plch">
-Another thing that hasn't been discussed is the abuse of the First Amendment - something which may call for a subchapter of its own.
+<p class = "reg">
+Others have either directly shut down the channels of debate
+due to exhaustion responding to them being abused.
+Still others, while not directly shutting down the channels,
+effectively did so by declaring certain positions to be taboo.
+While it is difficult to judge them in any way sharshly for folding
+in such ways to such intense pressure, it would be better if they
+had a way to bann the underhanded means by which the propagandists
+advanced their views rather than to bann the views themselves.
 </p>
 
 </body>
