Wrote the Toward A New Etiquette chapter

--- a/Text/a-new-etiquette.xhtml
+++ b/Text/a-new-etiquette.xhtml
@@ -12,11 +12,62 @@
 <h3>A new standard of etiquette</h3>
 
 <p class = "head">
-TO BE WRITTEN LATER
+Part of the goal of Algorithmic Rationalism is to introduce a
+new standard of etiquette to supplement pre-existing ones
+wherever the two are compatible and to supplant
+pre-existing ones on whatever matters they are at
+irreconcilable conflict.
 </p>
 
 <p class = "reg">
-This is where the Rules of Discourse come into play.
+There are plenty of codes of etiquette that exist int he world.
+Each one is generally written to serve various purposes, but
+rarely if ever is assuring the primacy of logic, reason, and
+evidence among those purposes.
+When it is, it tends to at times be overshadowed by other
+goals getting prioritized above it.
+Even codes of etiquette written expressly for the purpose
+of debate generally tend to strongly oppose rude or
+disorderly conduct, but have few if any portections against
+far more pernicious vices such as
+the use of deceptive rhetoric.
+</p>
+
+<p class = "reg">
+Granted, sometimes it can be difficult to include protections
+against such things in the debate's code of etiquette,
+as doing so might deter parties who wish to indulge in
+said unsavory behavior from participating in the debate.
+However, if the target audience of the debate were to
+strongly hold to a philosophy such as Algorithmic Rationalism,
+that might shift the scales of consideration in favor of
+including such provisions in the rules of the debate -
+as the credibility of the debate might rely on it.
+Similarly, it may in some cases even pressure a party
+that would otherwise be unwilling to participate in a debate
+in which logic, reason, and evidence have to actually be respected
+into doing so - or at least force them to openly expose
+unwillingness to try their views in the court of rationality.
+</p>
+
+<p class = "reg">
+In addition to merely asserting the importance of
+our codes of etiquette making logic, reason, and evidence
+a higher priority, part of the effort in developing
+Algorithmic Rationalism is the Rules of Discourse Project,
+whose sole publication currently is the Discursive Compendium
+of Fallacies and Malconducts.
+This document (currently an early work-in-progress, yet
+freely available as a Free Source project)
+strives to provide clear criteria for discerning whether or not
+a particular fallacy has been used, but also strives to describe
+what is and isn't proper conduct for debate, or any discussion,
+formal or informal, in a society that values rationality.
+It, too, does not intend to supplant pre-existing codes of
+etiquette - yet it does condemn invoking or enforcing
+those pre-existing codes
+in a manner that is at
+the expense of the unhindered pursuit of truth.
 </p>
 
 </body>
