Reverted to previous copyright terms

--- a/Text/copyright.xhtml
+++ b/Text/copyright.xhtml
@@ -14,7 +14,9 @@
 Copyright &#169; 2018 - Sophia Elizabeth Shapira
 </div>
 <div class = "notice_prg">
-This work is licensed under the terms of the Creative Commons Attribution-NoDerivatives 4.0 International license. <a href = "https://creativecommons.org/licenses/by-nd/4.0/" target = "_blank" rel = "noopener">https://creativecommons.org/licenses/by-nd/4.0/</a>
+Permission is granted to make and distribute verbatim copies
+of this entire document without royalty provided the
+copyright notice and this permission notice are preserved.
 </div>
 </div>
 
